<resources>
    <string name="app_name">LinkupAffinity</string>
    <string name="app_logo">App Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_prompt">Don’t have an account? Sign up</string>
    <string name="hint_filter_search">Filter by name or interest…</string>
    <string name="welcome_message">Welcome back, %s!</string>
    <string name="search_affinity_text">Search for Affinity</string>
</resources>