<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFBF0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageviewLogo"
            android:layout_width="280dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/app_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="6dp">

            <EditText
                android:id="@+id/edittextUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:background="@android:color/white"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                tools:ignore="RtlSymmetry" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="6dp">

            <EditText
                android:id="@+id/edittextPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:background="@android:color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                tools:ignore="RtlSymmetry" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardLogin"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textviewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/sign_up_prompt"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>